--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-audio": "~1.1.1",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
     "react": "19.1.0",
